--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 
 @import "tailwindcss";
 
+html, body {
+    height: 100%;
+    overflow-y: auto; 
+}
+
+#root {
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     margin: 0;
     background-color: #181818;
